
SPEC			= $(PACKAGE_NAME).spec
TARFILE			= $(PACKAGE_NAME)-$(VERSION).tar.gz

AUTOMAKE_OPTIONS	= foreign

MAINTAINERCLEANFILES	= Makefile.in aclocal.m4 configure depcomp \
			  config.guess config.sub missing install-sh \
			  autoheader automake autoconf libtool libtoolize \
			  ltmain.sh

ACLOCAL_AMFLAGS		= -I m4

phd_environmentdir = $(libexecdir)/$(PACKAGE_NAME)/environment

phd_environment_SCRIPTS = lvm.conf.phd_default

