MAINTAINERCLEANFILES	= Makefile.in

phd_libdir = $(libexecdir)/$(PACKAGE_NAME)/lib
phd_dockerdir = $(libexecdir)/$(PACKAGE_NAME)/docker

phd_lib_SCRIPTS = definition.sh	\
	pacemaker.sh	\
	package.sh	\
	phd_rsc_api.sh	\
	phd_utils_api.sh	\
	scenario_engine.sh	\
	shared_storage.sh	\
	transport_qarsh.sh	\
	transport_ssh.sh

SUBDIRS	= docker
