MAINTAINERCLEANFILES	= Makefile.in

phd_scenariosdir = $(libexecdir)/$(PACKAGE)/scenarios

phd_scenarios_SCRIPTS = apache-shared-lvm.scenario \
	cluster-destroy.scenario	\
	cluster-init.scenario	\
	clvmd-dlm-init.scenario	\
	cts-virt.scenario	\
	cts-virt-remote.scenario	\
	example.scenario	\
	gfs2-clvmd.scenario	\
	galera-basic.scenario	\
	iscsi.scenario	\
	iscsi-cleanup.scenario	\
	iscsi-logicalunit.scenario	\
	mariadb-basic.scenario	\
	nfs-active-active.scenario	\
	nfs-active-passive.scenario	\
	nfs-basic.scenario	\
	nfs-complex.scenario	\
	nfs-shared-clvmd.scenario	\
	remote-baremetal-basic.scenario	\
	remote-container-basic.scenario	\
	remote-container-50.scenario	\
	remote-container-100.scenario	\
	remote-container-200.scenario	\
	samba-active-active.scenario	\
	slapd-basic.scenario	\
	unfencing.scenario	\
	wipe-storage.scenario
