MAINTAINERCLEANFILES	= Makefile.in

phd_scenariosdir = $(libexecdir)/$(PACKAGE)/scenarios

phd_scenarios_SCRIPTS = apache-shared-lvm.scenario \
	cluster-destroy.scenario	\
	cluster-init.scenario	\
	clvmd-dlm-init.scenario	\
	cts-virt.scenario	\
	cts-virt-remote.scenario	\
	docker-apache-aa.scenario	\
	docker-apache-ap.scenario	\
	docker-remote.scenario	\
	ethmonitor-basic.scenario	\
	example.scenario	\
	gfs2-clvmd.scenario	\
	galera-basic.scenario	\
	ganesha-gluster.scenario	\
	iscsi.scenario	\
	iscsi-cleanup.scenario	\
	iSCSILogicalUnit.scenario	\
	iSCSILogicalUnit-targetcli.scenario	\
	iSCSITarget-targetcli.scenario		\
	mariadb-basic.scenario	\
	nfs-active-active.scenario	\
	nfs-active-passive.scenario	\
	nfs-basic.scenario	\
	nfs-complex.scenario	\
	nfs-shared-clvmd.scenario	\
	pgsql-streaming-rep.scenario	\
	remote-baremetal-basic.scenario	\
	remote-container-basic.scenario	\
	remote-container-50.scenario	\
	remote-container-100.scenario	\
	remote-container-200.scenario	\
	samba-active-active.scenario	\
	slapd-basic.scenario	\
	unfencing.scenario	\
	wipe-storage.scenario
